# gpuhammer

./: run_fig11.sh  run_fig12_t4.sh  run_fig15.sh  run_row_sets.sh
data_scripts/fig12_t4/: run_hammer_manual_B1.sh  run_hammer_manual_B2.sh  run_hammer_manual_D1.sh  run_hammer_manual_D3.sh
plot_scripts/: plot_fig11.py  plot_fig12.py  plot_fig15.py  plot_t4.sh
results/fig12_t4/: rand_val_labels.txt
src/: CMakeLists.txt
src/hammer/: trh.cu  trr_sampler_size.cu
src/include/: cuda_helpers.cu  cuda_helpers.cuh  hammer_kernels.cu  hammer_kernels.cuh  hammer_util.cu
util/: env_setup.sh  filter_validation_set.py  run_imagenet_models.py  run_known_flips.sh  run_trh.sh
